--- a/couriermanage/templates/new/about.html
+++ b/couriermanage/templates/new/about.html
@@ -23,11 +23,11 @@
 				<!-- Content Column -->
 				<div class="content-column col-lg-8 col-md-12 col-sm-12">
 					<div class="inner-column">
-						<h2>Welcome to the <span class="color">YouExpress</span> <span class="color"></span></h2>
-						<div class="bold-text">We provide the best suggestions for Logistics and Transposition in town Go beyond logistics, make the world go round and revolutionize business.</div>
+						<h2 style="font-family: Roboto;">Welcome to the <span class="color">YouExpress</span> <span class="color"></span></h2>
+						<div style="font-family: Roboto;" class="bold-text">We provide the best suggestions for Logistics and Transposition in town Go beyond logistics, make the world go round and revolutionize business.</div>
 						<div class="text">
-							<p>YouExpress is a Leading Provider of Quality Packers And Movers in world. With our Experience of over 25+ Years in the Industry, the company is highly skilled and is equipped with the best of facilities to match all High Quality Moving Standards.</p>
-							<p>We constantly delivering the best is taken care of with the help of our Products Durability, Products Comfort and Products Attractiveness.We offer a wide range of Moving And Packing, logistics, transportation Upholestery Services in all over the world.</p>
+							<p style="font-family: Roboto;">YouExpress is a Leading Provider of Quality Packers And Movers in world. With our Experience of over 25+ Years in the Industry, the company is highly skilled and is equipped with the best of facilities to match all High Quality Moving Standards.</p>
+							<p style="font-family: Roboto;">We constantly delivering the best is taken care of with the help of our Products Durability, Products Comfort and Products Attractiveness.We offer a wide range of Moving And Packing, logistics, transportation Upholestery Services in all over the world.</p>
 						</div>
 					</div>
 				</div>
@@ -90,7 +90,7 @@
 					<!-- Content Column -->
 					<div class="content-column col-lg-8 col-md-12 col-sm-12">
 						<div class="inner-column">
-							<h2>Why Choose Us for <span class="color">Logistics</span> & <span class="color">Transportation</span></h2>
+							<h2 style="font-family: Roboto;">Why Choose Us for <span class="color">Logistics</span> & <span class="color">Transportation</span></h2>
 							<div style="text-align: left;font-family:Roboto;" class="text">Mylogistics is a Leading Provider of Quality Packers And Movers in world. With our Experience of over 25+ Years in the Industry, the company is highly skilled and is equipped with the best of facilities to match all High Quality Moving Standards.
 We constantly delivering the best is taken care of with the help of our Products Durability, Products Comfort and Products Attractiveness.We offer a wide range of Moving And Packing, logistics, transportation Upholestery Services in all over the world.</div>
 							<div class="row clearfix">
@@ -149,10 +149,10 @@ We constantly delivering the best is taken care of with the help of our Products
 					<div class="column counter-column col-lg-3 col-md-6 col-sm-12">
 						<div class="inner wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
 							<div class="content">
-								<div class="count-outer count-box">
+								<div style="font-family: Roboto;" class="count-outer count-box">
 									<span class="count-text" data-speed="2500" data-stop="25">0</span> Year's
 								</div>
-								<h4 class="counter-title">Material Warranty</h4>
+								<h4 style="font-family: Roboto;" class="counter-title">Material Warranty</h4>
 							</div>
 						</div>
 					</div>
@@ -161,10 +161,10 @@ We constantly delivering the best is taken care of with the help of our Products
 					<div class="column counter-column col-lg-3 col-md-6 col-sm-12">
 						<div class="inner wow fadeInLeft" data-wow-delay="300ms" data-wow-duration="1500ms">
 							<div class="content">
-								<div class="count-outer count-box alternate">
+								<div style="font-family: Roboto;" class="count-outer count-box alternate">
 									<span class="count-text" data-speed="3000" data-stop="2200">0</span>+
 								</div>
-								<h4 class="counter-title">Order Completed</h4>
+								<h4 style="font-family: Roboto;" class="counter-title">Order Completed</h4>
 							</div>
 						</div>
 					</div>
@@ -173,10 +173,10 @@ We constantly delivering the best is taken care of with the help of our Products
 					<div class="column counter-column col-lg-3 col-md-6 col-sm-12">
 						<div class="inner wow fadeInLeft" data-wow-delay="600ms" data-wow-duration="1500ms">
 							<div class="content">
-								<div class="count-outer count-box">
+								<div class="count-outer count-box" style="font-family: Roboto;">
 									<span class="count-text" data-speed="3000" data-stop="300">0</span>+
 								</div>
-								<h4 class="counter-title">Team Members</h4>
+								<h4 class="counter-title" style="font-family: Roboto;">Team Members</h4>
 							</div>
 						</div>
 					</div>
@@ -185,10 +185,10 @@ We constantly delivering the best is taken care of with the help of our Products
 					<div class="column counter-column col-lg-3 col-md-6 col-sm-12">
 						<div class="inner wow fadeInLeft" data-wow-delay="900ms" data-wow-duration="1500ms">
 							<div class="content">
-								<div class="count-outer count-box">
+								<div class="count-outer count-box" style="font-family: Roboto;">
 									<span class="count-text" data-speed="2500" data-stop="20">0</span> Days
 								</div>
-								<h4 class="counter-title">Delivery</h4>
+								<h4 class="counter-title" style="font-family: Roboto;">Delivery</h4>
 							</div>
 						</div>
 					</div>
@@ -211,9 +211,9 @@ We constantly delivering the best is taken care of with the help of our Products
 				<!-- Content Column -->
 				<div class="content-column col-xl-6 col-lg-6 col-md-12 col-sm-12">
 					<div class="inner-column">
-						<h2 style="color: black;">Company <span class="color">Vision</span></h2>
+						<h2 style="color: black;font-family: Roboto;">Company <span class="color">Vision</span></h2>
 						<!-- <div class="bold-text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div> -->
-						<div style="text-align:left;" class="text">Our vision is to establish YouExpress Logistics as the most grounded worldwide logistics & supply chain management company as a trusted partner to all our clients.</div>
+						<div style="text-align:left;font-family: Roboto;" class="text">Our vision is to establish YouExpress Logistics as the most grounded worldwide logistics & supply chain management company as a trusted partner to all our clients.</div>
 						
 					
 					</div>
@@ -221,9 +221,9 @@ We constantly delivering the best is taken care of with the help of our Products
 
 				<div class="content-column col-xl-6 col-lg-6 col-md-12 col-sm-12">
 					<div class="inner-column">
-						<h2 style="color: black;">Company <span class="color"> Mission</span></h2>
+						<h2 style="color: black;font-family: Roboto;">Company <span class="color"> Mission</span></h2>
 						<!-- <div class="bold-text">Lorem Ipsum is simply my text of the printing and Ipsum is the Ipsum is simply.</div> -->
-						<div style="text-align: left;" class="text">Our mission is to deliver a positive, reliable experience to each and every one of our clients while offering exceptional value in the marketplace and setting the standard for professionalism in the logistic solutions we provide.</div>
+						<div style="text-align: left;font-family: Roboto;" class="text">Our mission is to deliver a positive, reliable experience to each and every one of our clients while offering exceptional value in the marketplace and setting the standard for professionalism in the logistic solutions we provide.</div>
 						
 					
 					</div>
@@ -239,8 +239,8 @@ We constantly delivering the best is taken care of with the help of our Products
 		<div class="auto-container">
 			<!-- Sec Title -->
 			<div class="sec-title light centered">
-				<h2 style="text-align: left;">Our <span class="color"> Experts</span></h2>
-				<div style="text-align: left;" class="text">Our caregivers are trained specifically to provide in-home care.</div>
+				<h2 style="text-align: left;font-family: Roboto;">Our <span class="color"> Experts</span></h2>
+				<div style="text-align: left;font-family: Roboto;" class="text">Our caregivers are trained specifically to provide in-home care.</div>
 			</div>
 			
 			<div class="clearfix">
@@ -260,7 +260,7 @@ We constantly delivering the best is taken care of with the help of our Products
 							</div>
 						</div>
 						<div class="lower-content">
-							<h3 style="text-align: left;"><a>Joe Steve</a></h3>
+							<h3 style="text-align: left;font-family: Roboto;"><a>Joe Steve</a></h3>
 							<!-- <div class="designation">CEO</div> -->
 						</div>
 					</div>
@@ -281,7 +281,7 @@ We constantly delivering the best is taken care of with the help of our Products
 							</div>
 						</div>
 						<div class="lower-content">
-							<h3 style="text-align: left;"><a >Henry Root</a></h3>
+							<h3 style="text-align: left;font-family: Roboto;"><a >Henry Root</a></h3>
 							<!-- <div class="designation">Managing Director</div> -->
 						</div>
 					</div>
@@ -302,7 +302,7 @@ We constantly delivering the best is taken care of with the help of our Products
 							</div>
 						</div>
 						<div class="lower-content">
-							<h3 style="text-align: left;"><a >Mark Starc</a></h3>
+							<h3 style="text-align: left;font-family: Roboto;"><a >Mark Starc</a></h3>
 							<!-- <div class="designation">Bussiness Head</div> -->
 						</div>
 					</div>
@@ -323,7 +323,7 @@ We constantly delivering the best is taken care of with the help of our Products
 							</div>
 						</div>
 						<div class="lower-content">
-							<h3 style="text-align: left;"><a >Alex Wind</a></h3>
+							<h3 style="text-align: left;font-family: Roboto;"><a >Alex Wind</a></h3>
 							<!-- <div class="designation">Operation Head</div> -->
 						</div>
 					</div>
