--- a/couriermanage/templates/new/services-dark.html
+++ b/couriermanage/templates/new/services-dark.html
@@ -22,8 +22,8 @@
 			
 			<!-- Sec Title -->
 			<div class="sec-title light centered">
-				<h2 style="text-align: left;color: black;">Our Awesome <span class=""> Services</span></h2>
-				<div style="text-align: left;color: black;" class="text">Mylogistics Packers And Movers is a Leading Provider of Quality Packers And Movers in World.We are specialist in providing following services like Home Relocation,Residential Relocation Services,Corporate Relocation Services,Warehousing Services, Packing Services,Commercial/office Relocation Services,Car Transportation,Industrial Machinery Relocation,Two Wheeler Transportation. We are Commited for customer's or clients 100% satisfaction</div>
+				<h2 style="text-align: left;color: black;font-family: Roboto;">Our Awesome <span class=""> Services</span></h2>
+				<div style="text-align: left;color: black;font-family: Roboto;" class="text">Mylogistics Packers And Movers is a Leading Provider of Quality Packers And Movers in World.We are specialist in providing following services like Home Relocation,Residential Relocation Services,Corporate Relocation Services,Warehousing Services, Packing Services,Commercial/office Relocation Services,Car Transportation,Industrial Machinery Relocation,Two Wheeler Transportation. We are Commited for customer's or clients 100% satisfaction</div>
 			</div>
 			
 			<div class="row clearfix">
@@ -34,7 +34,7 @@
 						<div class="image">
 							<a><img src="{% static 'new/images/resource/service-8.jpg' %}" alt="" /></a>
 						</div>
-						<div class="lower-content">
+						<div class="lower-content" style="background-color: #242424;">
 							<h3><a>Warehouse</a></h3>
 							<!-- <div class="text">Override the digital divide with additional clickthroughs from DevOps. Nanotech Nology imme rsion along the information highway will close the loop.</div> -->
 							<!-- <a href="#" class="read-more">Read more</a> -->
@@ -48,7 +48,7 @@
 						<div class="image">
 							<a><img src="{% static 'new/images/resource/service-9.jpg' %}" alt="" /></a>
 						</div>
-						<div class="lower-content">
+						<div class="lower-content" style="background-color: #242424;">
 							<h3><a>Cargo</a></h3>
 							<!-- <div class="text">Override the digital divide with additional clickthroughs from DevOps. Nanotech Nology imme rsion along the information highway will close the loop.</div> -->
 							<!-- <a href="#" class="read-more">Read more</a> -->
@@ -62,7 +62,7 @@
 						<div class="image">
 							<a ><img src="{% static 'new/images/resource/service-10.jpg' %}" alt="" /></a>
 						</div>
-						<div class="lower-content">
+						<div class="lower-content" style="background-color: #242424;">
 							<h3><a >Supply Chain</a></h3>
 							<!-- <div class="text">Override the digital divide with additional clickthroughs from DevOps. Nanotech Nology imme rsion along the information highway will close the loop.</div> -->
 							<!-- <a href="#" class="read-more">Read more</a> -->
@@ -76,7 +76,7 @@
 						<div class="image">
 							<a ><img src="{% static 'new/images/resource/service-11.jpg' %}" alt="" /></a>
 						</div>
-						<div class="lower-content">
+						<div class="lower-content" style="background-color: #242424;">
 							<h3><a >Transportation</a></h3>
 							<!-- <div class="text">Override the digital divide with additional clickthroughs from DevOps. Nanotech Nology imme rsion along the information highway will close the loop.</div> -->
 							<!-- <a href="#" class="read-more">Read more</a> -->
@@ -90,7 +90,7 @@
 						<div class="image">
 							<a ><img src="{% static 'new/images/resource/service-12.jpg' %}" alt="" /></a>
 						</div>
-						<div class="lower-content">
+						<div class="lower-content" style="background-color: #242424;">
 							<h3><a >Commercial Relocation</a></h3>
 							<!-- <div class="text">Override the digital divide with additional clickthroughs from DevOps. Nanotech Nology imme rsion along the information highway will close the loop.</div> -->
 							<!-- <a href="#" class="read-more">Read more</a> -->
@@ -104,7 +104,7 @@
 						<div class="image">
 							<a ><img src="{% static 'new/images/resource/service-13.jpg' %}" alt="" /></a>
 						</div>
-						<div class="lower-content">
+						<div class="lower-content" style="background-color: #242424;">
 							<h3><a>Multimodal Transportation</a></h3>
 							<!-- <div class="text">Override the digital divide with additional clickthroughs from DevOps. Nanotech Nology imme rsion along the information highway will close the loop.</div> -->
 							<!-- <a href="#" class="read-more">Read more</a> -->
@@ -190,7 +190,7 @@
                  <h4 style="color: white;text-align: left;font-family:Roboto;">Let us move you with honesty.</h4>
 			</div>
 			<div class="col-lg-4">
-                 <a href="{% url 'contact' %}" class="theme-btn btn-style-two"><span class="txt">contact us</span></a>
+                 <a href="{% url 'contact' %}" class="theme-btn btn-style-one"><span class="txt">contact us</span></a>
 			</div>
 			</div>
 		</div>
