--- a/CMS/static/new/css/style.css
+++ b/CMS/static/new/css/style.css
@@ -233,14 +233,14 @@ ul,li{
 	display: inline-block;
 	font-size: 13px;
 	line-height: 30px;
-	color: #242424;
+	color: white;
 	padding: 8px 26px;
 	font-weight: 600;
 	overflow: hidden;
 	letter-spacing:3px;
 	background-color: #228dcb;
 	text-transform: uppercase;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 .btn-style-one .txt{
@@ -256,6 +256,7 @@ ul,li{
     width: 100%;
     height: 100%;
     z-index: 1;
+	color: #228dcb;
     opacity: 0;
     background-color: #ffffff;
     -webkit-transition: all 0.4s;
@@ -270,10 +271,11 @@ ul,li{
     opacity: 1;
     -webkit-transform: scale(1, 1);
     transform: scale(1, 1);
+	color: #228dcb;
 }
 
 .btn-style-one:hover{
-	color: #242424;
+	color: #228dcb;
 }
 
 /* Btn Style Two */
@@ -283,7 +285,7 @@ ul,li{
 	display: inline-block;
 	font-size: 13px;
 	line-height: 30px;
-	color: #242424;
+	color: #228dcb;
 	padding: 10px 37px;
 	font-weight: 600;
 	overflow: hidden;
@@ -2274,7 +2276,7 @@ img{
 	border-radius:5px 0px 0px 5px;
 	opacity:0.70;
 	text-align:center;
-	color:#353535;
+	color:#228dcb;
 	background-image:none;
 	-webkit-transition:all 0.5s ease;
 	-moz-transition:all 0.5s ease;
@@ -2295,7 +2297,7 @@ img{
 	border-radius:0px 5px 5px 0px;
 	opacity:0.70;
 	text-align:center;
-	color:#353535;
+	color:#228dcb;
 	-webkit-transition:all 0.5s ease;
 	-moz-transition:all 0.5s ease;
 	-ms-transition:all 0.5s ease;
@@ -2309,6 +2311,7 @@ img{
 .main-slider .owl-prev:hover{
 	background:#228dcb;
 	opacity:1;	
+	color: white;
 }
 
 .main-slider .owl-dots{
@@ -3886,7 +3889,7 @@ img{
 
 .service-block-three .inner-box .lower-content{
 	position:relative;
-	padding:34px 20px 50px;
+	padding:34px 20px 25px;
 	text-align:center;
 	background-color:#1AA7EC;
 	color: white;
@@ -4052,7 +4055,7 @@ img{
 	font-weight:400;
 	line-height:1.7em;
 	margin-top:16px;
-	margin-bottom:50px;
+	margin-bottom:30px;
 }
 
 .dark-layout .interior-section .content-column .text,
@@ -5640,6 +5643,7 @@ position: relative;
 
 .sidebar-page-container .contact-widget .widget-content .theme-btn:hover{
 	background-color: #ffffff;
+	color: #228dcb;
 }
 
 .dark-layout .services-detail .inner-box .text h4,
