--- a/couriermanage/templates/new/contact.html
+++ b/couriermanage/templates/new/contact.html
@@ -24,10 +24,9 @@
                 <div class="col-12">
                     <div class="section-heading text-center">
                         <div class="more-dots justify-content-center fadeInUp" data-wow-delay="0.2s">
-                            <span class="">
-                                We’d love to hear from you.</span>
+                           
                         </div>
-                        <h2 class="wow fadeInUp d-blue" data-wow-delay="0.3s">Contact With Us</h2>
+                        <h2 class="wow fadeInUp d-blue" data-wow-delay="0.3s" style="font-family: Roboto;">Contact With Us</h2>
                         <!-- <p class="wow fadeInUp" data-wow-delay="0.4s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis accumsan nisi Ut ut felis congue nisl hendrerit commodo.</p> -->
                     </div>
                 </div>
@@ -35,7 +34,7 @@
             <br>
             <!-- Contact Form -->
             <div class="row justify-content-center">
-                <div class="col-12 col-md-10 col-lg-8">
+                <div>
                     <div class="contact_form">
                         <form method="post" >
                             {% csrf_token %}
@@ -50,7 +49,7 @@
                                         <span class="bar"></span>
                                         
                                     </div>
-                                </div> <br>
+                                </div> 
                                 <div style="margin-top: 20px;" class="col-12 col-md-6">
                                     <div class="group wow fadeInUp" data-wow-delay="0.3s">
                                         
@@ -59,7 +58,7 @@
                                         <span class="bar"></span>
                                         
                                     </div>
-                                </div> <br>
+                                </div> 
                                 <div style="margin-top: 20px;" class="col-12 col-md-6">
                                     <div class="group wow fadeInUp" data-wow-delay="0.4s">
                                         
@@ -68,7 +67,7 @@
                                         <span class="bar"></span>
                                         
                                     </div>
-                                </div> <br>
+                                </div> 
                                 <div style="margin-top: 20px;" class="col-12 col-md-6">
                                     <div class="group wow fadeInUp" data-wow-delay="0.4s">
                                         
@@ -87,7 +86,7 @@
                                     </div>
                                 </div> 
                                 <div style="margin-top: 20px;float: left;" class="col-12 wow fadeInUp" data-wow-delay="0.6s">
-                                    <button style="background-color: #1AA7EC;color: white;" type="submit" class="btn btn-success form-control">Send Message</button>
+                                    <button class="theme-btn btn-style-one" type="submit" ><span class="txt">Send Message</span></button>
                                 </div>
                             </div>
                         </form>
