--- a/couriermanage/templates/new/about.html
+++ b/couriermanage/templates/new/about.html
@@ -43,7 +43,7 @@
 				
 			</div>
 			
-				<div class="row clearfix" style="padding-top: 12px;">
+				<div class="row clearfix" style="padding-top: 12px;font-family: Roboto;">
                    <div class="col-lg-4">
 		                   <ul class="list-style-three">
 							<li>4 years material warranty.</li>
