--- a/couriermanage/templates/new/base.html
+++ b/couriermanage/templates/new/base.html
@@ -7,7 +7,7 @@
 <title>YouExpress - Logistics</title>
 <!-- Stylesheets -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
 <link href="{% static 'new/css/bootstrap.css' %}" rel="stylesheet">
 <link href="{% static 'new/css/style.css' %}" rel="stylesheet">
 <link href="{% static 'new/css/responsive.css' %}" rel="stylesheet">
@@ -37,8 +37,8 @@
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #242424;color: white;font-weight: normal;font-size: medium;font-family: Roboto;">
 		<div class="container">
 			<a class="navbar-brand" href="{% url 'home' %}"><img  src="{% static 'new/logo.png' %}" alt="" title="" width="129px" height="90px" ></a>
-		<button style="background-color: white;" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon"></span>
+		<button  class="navbar-toggler" style="background-color:#242424 ;border-color: #242424;" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+		  <span style="color: white;" class="navbar-toggler-icon"><i class="fa fa-navicon" style="color:#fff; font-size:28px;"></i></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarText">
 		  <ul class="navbar-nav mr-auto">
