--- a/couriermanage/templates/new/base.html
+++ b/couriermanage/templates/new/base.html
@@ -46,7 +46,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #242424;color: white;font-weight: normal;font-size: medium;font-family: Roboto;">
 		<div class="container">
 			<a class="navbar-brand" href="{% url 'home' %}"><img  src="{% static 'new/logo.png' %}" alt="" title="" width="129px" height="90px" ></a>
-		<button  class="navbar-toggler ml-auto custom-toggler" style="background-color: #242424;border-color: #242424;" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+		<button  class="navbar-toggler ml-auto custom-toggler" style="background-color: #242424;border-color: #242424;border: 0px;" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		  <span style="color: white;" class="navbar-toggler-icon"></span>
 		</button>
 		<!-- <button class="btn btn-secondary" style="background-color: #242424;border: none;" type="button" data-toggle="collapse" 
