--- a/couriermanage/templates/new/about.html
+++ b/couriermanage/templates/new/about.html
@@ -47,23 +47,23 @@
 				<div class="row clearfix" style="padding-top: 12px;font-family: Roboto;">
                    <div class="col-lg-4">
 		                   <ul class="list-style-three">
-							<li>4 years material warranty.</li>
-							<li>1000+ projects has been completed.</li>
-							<li>499+ professinals are available.</li>
+							<li style="font-family: Roboto;">4 years material warranty.</li>
+							<li style="font-family: Roboto;">1000+ projects has been completed.</li>
+							<li style="font-family: Roboto;">499+ professinals are available.</li>
 						   </ul>
                     </div>
                     <div class="col-lg-4">
 		                   <ul class="list-style-three">
-							<li>15+ awards.</li>
-							<li>Available on 10+ countries. </li>
-							<li>Borderless logistics.</li>
+							<li style="font-family: Roboto;">15+ awards.</li>
+							<li style="font-family: Roboto;">Available on 10+ countries. </li>
+							<li style="font-family: Roboto;">Borderless logistics.</li>
 						   </ul>
                     </div>
                     <div class="col-lg-4">
 		                   <ul class="list-style-three">
-							<li>A world-class port.</li>
-							<li>Endless possibilities.</li>
-							<li>Happiness delivered.</li>
+							<li style="font-family: Roboto;">A world-class port.</li>
+							<li style="font-family: Roboto;">Endless possibilities.</li>
+							<li style="font-family: Roboto;">Happiness delivered.</li>
 						   </ul>
                     </div>
                           
