--- a/couriermanage/templates/new/base.html
+++ b/couriermanage/templates/new/base.html
@@ -225,9 +225,9 @@
 									<div class="widget-content">
 									
 										<ul> 
-											<li><span class="icon flaticon-phone-call"></span><a href="tel:1234567891">(1234) 567 8910</a></li>
-											<li><span class="icon flaticon-map"></span> 000, Mumbai, India</li>
-											<li><span class="icon flaticon-email"></span><a href="mailto:youremail@example.com"> youremail@example.com</a></li>
+											<!-- <li><span class="icon flaticon-phone-call"></span><a href="tel:1234567891">(1234) 567 8910</a></li> -->
+											<li><span class="icon flaticon-map"></span> 1468 St Marys Rd Manitoba, Canada</li>
+											<li><span class="icon flaticon-email"></span><a href="youexpress.us@gmail.com"> youexpress.us@gmail.com</a></li>
 										</ul>
 									</div>
 								</div>
