--- a/couriermanage/templates/new/contact.html
+++ b/couriermanage/templates/new/contact.html
@@ -86,10 +86,11 @@
                                         
                                     </div>
                                 </div> 
-                                <div style="margin-top: 20px;float: left;" class="col-12 wow fadeInUp" data-wow-delay="0.6s">
+                                
+                            </div>
+                            <div style="margin-top: 20px;float: left;" class=" wow fadeInUp" data-wow-delay="0.6s">
                                     <button class="theme-btn btn-style-one" type="submit" ><span class="txt">Send Message</span></button>
                                 </div>
-                            </div>
                         </form>
                     </div>
                 </div>
