--- a/couriermanage/templates/new/contact.html
+++ b/couriermanage/templates/new/contact.html
@@ -88,9 +88,9 @@
                                 </div> 
                                 
                             </div>
-                            <div style="margin-top: 22px;float: left;" class=" wow fadeInUp" data-wow-delay="0.6s">
-                                    <button class="theme-btn btn-style-one" type="submit" ><span class="txt">Send Message</span></button>
-                                </div>
+                            
+                                    <button class="theme-btn btn-style-one wow fadeInUp" style="margin-top: 22px;float: left;" type="submit" ><span class="txt">Send Message</span></button>
+                              
                         </form>
                     </div>
                 </div>
