--- a/couriermanage/templates/new/listing.html
+++ b/couriermanage/templates/new/listing.html
@@ -66,7 +66,7 @@
                                 <p>{{ listing.comments }}</p>
                                
                                 <br>
-                                <img width="200px" height="150px" src="{% static 'co/img/barcode.png' %}" alt="">
+                                <img width="200px" height="150px" src="{% static 'new/barcode.png' %}" alt="">
                              <p>Tracking No. {{ listing.tracking_id }}</p>
                             </div>
                              
